# fuzzyfst

./: .gitignore  CMakeLists.txt  INTERNALS.md  PYPI.md  README.md  plan.md  pyproject.toml
.github/workflows/: publish.yml
bench/: bench_comparison.cpp  bench_damerau.cpp  bench_four_modes.cpp
bench/symspell/: symspell.hpp
cli/: main.cpp
data/: benchmark_queries.txt
include/fuzzyfst/: fuzzyfst.h
python/: bindings.cpp
python/fuzzyfst/: __init__.py  _fuzzyfst.pyi
python/tests/: test_fuzzyfst.py
src/: arena.cpp  arena.h  damerau_nfa.cpp  damerau_nfa.h  damerau_search.cpp  damerau_search.h  fst_decode.h  fst_reader.cpp  fst_reader.h  fst_writer.cpp  fst_writer.h  fuzzy_search.cpp  fuzzy_search.h  fuzzyfst.cpp  hyyro_nfa.cpp  hyyro_nfa.h  hyyro_search.cpp  hyyro_search.h  levenshtein_dfa.cpp  levenshtein_dfa.h  levenshtein_dfa_search.cpp  levenshtein_dfa_search.h  levenshtein_nfa.cpp  levenshtein_nfa.h  radix_sort.cpp  radix_sort.h  state_map.cpp  state_map.h  trie_builder.cpp  trie_builder.h  trie_node.h
tests/: bench_profile.cpp  test_arena.cpp  test_damerau_correctness.cpp  test_damerau_nfa.cpp  test_four_modes.cpp  test_fst_builder.cpp  test_fst_roundtrip.cpp  test_fuzzy_correctness.cpp  test_hyyro_correctness.cpp  test_hyyro_nfa.cpp  test_levenshtein_nfa.cpp  test_main.cpp  test_metric_comparison.cpp  test_radix_sort.cpp  test_state_map.cpp
