[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "fuzzyfst"
version = "0.2.0"
description = "Fast fuzzy string search using finite state transducers"
requires-python = ">=3.9"
readme = "PYPI.md"
keywords = ["fuzzy", "search", "levenshtein", "fst", "spell-check", "autocomplete"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Indexing",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

[project.urls]
Homepage = "https://github.com/markymn/fuzzyfst"
Repository = "https://github.com/markymn/fuzzyfst"

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.scikit-build]
cmake.args = ["-DFUZZYFST_PYTHON=ON"]
wheel.packages = ["python/fuzzyfst"]
